Use more complex integral with mutliple paramters

--- a/Scipy_Cython.ipynb
+++ b/Scipy_Cython.ipynb
@@ -11,11 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We show how to speed up the calculation of the exemplary integral\n",
+    "We show how to speed up the calculation of this exemplary integral with multiple paramters\n",
+    "\n",
     "$$\n",
-    "\\int_0^\\infty \\mathrm{d}x\\, \\frac{x \\mathrm{e}^{-x}}{\\tanh x} \\cos(10x)\n",
+    "I(a, b) = \\int_0^\\infty \\mathrm{d}x\\, \\frac{x \\mathrm{e}^{-ax}}{\\tanh x} \\cos(bx)\n",
     "$$\n",
-    "by means of Cython with different techniques in combination with Scipy's `quad` routine."
+    "\n",
+    "by means of Cython in combination with Scipy's `quad` routine."
    ]
   },
   {
@@ -447,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
