Imporove task description

--- a/Scipy_Cython.ipynb
+++ b/Scipy_Cython.ipynb
@@ -11,13 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We show how to speed up the calculation of this exemplary integral with multiple paramters\n",
+    "Our aim is to speed up the calculation of an exemplary integral with multiple paramters\n",
     "\n",
     "$$\n",
     "I(a, b) = \\int_0^\\infty \\mathrm{d}x\\, \\frac{x \\mathrm{e}^{-ax}}{\\tanh x} \\cos(bx)\n",
     "$$\n",
     "\n",
-    "by means of Cython in combination with Scipy's `quad` routine."
+    "by means of Cython in combination with Scipy's `quad` routine.\n",
+    "\n",
+    "We show several levels of speed improvements leveraging more and more features of Cython and Scipy."
    ]
   },
   {
@@ -43,6 +45,7 @@
    "source": [
     "%%writefile module.pyx\n",
     "\n",
+    "import math\n",
     "from libc.math cimport exp, tanh, cos\n",
     "\n",
     "cdef double c_integrand(double x):\n",
@@ -57,7 +60,6 @@
     "    else:\n",
     "        return x * exp(-x)/tanh(x) * cos(10 * x)\n",
     "    \n",
-    "import math\n",
     "def integrand(x):\n",
     "    if x == 0:\n",
     "        return 1\n",
