--- a/Scipy_Cython.ipynb
+++ b/Scipy_Cython.ipynb
@@ -19,127 +19,27 @@
     "\n",
     "by means of Cython in combination with Scipy's `quad` routine.\n",
     "\n",
-    "We show several levels of speed improvements leveraging more and more features of Cython and Scipy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create extension module `.pyx`"
+    "We show several levels of speed improvements leveraging more and more advanced features of Cython and Scipy."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing module.pyx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%writefile module.pyx\n",
-    "\n",
     "import math\n",
-    "from libc.math cimport exp, tanh, cos\n",
     "\n",
-    "cdef double c_integrand(double x):\n",
-    "    if x == 0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return x * exp(-x)/tanh(x) * cos(10 * x)  \n",
-    "\n",
-    "cpdef double cp_integrand(double x):\n",
-    "    if x == 0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return x * exp(-x)/tanh(x) * cos(10 * x)\n",
-    "    \n",
     "def integrand(x):\n",
     "    if x == 0:\n",
     "        return 1\n",
     "    else:\n",
-    "        return x * math.exp(-x)/math.tanh(x) * math.cos(10 * x) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create a corresponding `.pxd` declaration file"
+    "        return x * math.exp(-x)/math.tanh(x) * math.cos(10 * x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing module.pxd\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile module.pxd\n",
-    "\n",
-    "cdef double c_integrand(double x)\n",
-    "cpdef double cp_integrand(double x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, <pyximport.pyximport.PyxImporter at 0x7f3218277090>)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pyximport; pyximport.install(inplace=True, language_level=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mType:\u001b[0m        module\n",
-       "\u001b[0;31mString form:\u001b[0m <module 'module' (/home/daniel/Scipy_with_Cython/module.cpython-37m-x86_64-linux-gnu.so)>\n",
-       "\u001b[0;31mFile:\u001b[0m        ~/Scipy_with_Cython/module.cpython-37m-x86_64-linux-gnu.so\n",
-       "\u001b[0;31mDocstring:\u001b[0m   <no docstring>\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import module\n",
-    "module?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +47,12 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "x = np.linspace(0, 10, 200)\n",
-    "y = [module.integrand(x_i) for x_i in x]"
+    "y = [integrand(x_i) for x_i in x]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,8 +73,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create an extension module `module.pyx`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing module.pyx\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile module.pyx\n",
+    "\n",
+    "from libc.math cimport exp, tanh, cos\n",
+    "\n",
+    "cpdef double cp_integrand(double x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return x * exp(-x)/tanh(x) * cos(10 * x) \n",
+    "    \n",
+    "cdef double c_integrand(double x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return x * exp(-x)/tanh(x) * cos(10 * x)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a corresponding `module.pxd` declaration file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing module.pxd\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile module.pxd\n",
+    "\n",
+    "cdef double c_integrand(double x)\n",
+    "cpdef double cp_integrand(double x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, <pyximport.pyximport.PyxImporter at 0x7f7d05638350>)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pyximport; pyximport.install(inplace=True, language_level=3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's an extension module: ./module.cpython-37m-x86_64-linux-gnu.so\n"
+     ]
+    }
+   ],
+   "source": [
+    "import module, os\n",
+    "print(\"It's an extension module:\", module.__file__.replace(os.getcwd(), \".\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,12 +192,10 @@
        " '__pyx_capi__',\n",
        " '__spec__',\n",
        " '__test__',\n",
-       " 'cp_integrand',\n",
-       " 'integrand',\n",
-       " 'math']"
+       " 'cp_integrand']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,17 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'c_integrand': <capsule object \"double (double)\" at 0x7f3210fd9840>,\n",
-       " 'cp_integrand': <capsule object \"double (double, int __pyx_skip_dispatch)\" at 0x7f3210fd98a0>}"
+       "{'c_integrand': <capsule object \"double (double)\" at 0x7f7d04164f00>,\n",
+       " 'cp_integrand': <capsule object \"double (double, int __pyx_skip_dispatch)\" at 0x7f7d041648a0>}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "from scipy.integrate import quad\n",
     "from scipy import LowLevelCallable\n",
     "\n",
     "from module import cp_integrand\n",
-    "from module import integrand\n",
-    "import math\n",
     "\n",
     "# along to the compiled module, a corresponding .pxd file with declarations is necessary\n",
     "ll_cython_c_integrand = LowLevelCallable.from_cython(module, 'c_integrand')\n",
@@ -273,24 +274,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "548 µs ± 33.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# pure Python version\n",
-    "%timeit integral1()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -298,13 +281,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "201 µs ± 8.86 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "908 µs ± 48.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "# Cython version of integrand, passed over to quad as PyObject\n",
-    "%timeit integral2()"
+    "# pure Python version\n",
+    "%timeit integral1()"
    ]
   },
   {
@@ -316,7 +299,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127 µs ± 5.84 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "200 µs ± 5.1 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cython version of integrand, passed over to quad as PyObject\n",
+    "%timeit integral2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127 µs ± 3.69 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122 µs ± 5.21 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "130 µs ± 3.24 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +468,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
