--- a/Scipy_Cython.ipynb
+++ b/Scipy_Cython.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create an extension module `module.pyx`"
+    "## Create an extension module: `module.pyx`"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a corresponding `module.pxd` declaration file"
+    "## Create a corresponding declaration file: `module.pxd`"
    ]
   },
   {
