Update Jupyter notebook

--- a/Scipy_Cython.ipynb
+++ b/Scipy_Cython.ipynb
@@ -448,8 +448,10 @@
     "\n",
     "def integral5(params):\n",
     "    capsule = PyCapsule_New(<void*>params, NULL, NULL)\n",
-    "    ll_c_integrand_inside_module = LowLevelCallable.from_cython(current_module, '__pyx_fuse_1c_integrand', \n",
-    "                                                                capsule, \"double (double, void *)\")\n",
+    "    ll_c_integrand_inside_module = LowLevelCallable.from_cython(current_module, \n",
+    "                                                                '__pyx_fuse_1c_integrand', \n",
+    "                                                                capsule, \n",
+    "                                                                \"double (double, void *)\")\n",
     "    \n",
     "    return quad(ll_c_integrand_inside_module, 0, math.inf)\n",
     "\n",
@@ -687,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using extension types"
+    "## Using Cython extension types"
    ]
   },
   {
@@ -741,8 +743,11 @@
     "        return self.a * x\n",
     "    \n",
     "    def integral1(self):      \n",
-    "        #return quad(self.integrand, 0, 1) # does not work with cdef, but with cpdef\n",
-    "        return quad(lambda x : Integral.integrand(self, x), 0, 1) # works with cdef\n",
+    "        # does not work with cdef, but with cpdef\n",
+    "        #return quad(self.integrand, 0, 1)\n",
+    "        \n",
+    "        # works with cdef\n",
+    "        return quad(lambda x : type(self).__name__.integrand(self, x), 0, 1)\n",
     "    \n",
     "    def integral2(self):\n",
     "        #capsule = PyCapsule_New(<void*>&self.a, NULL, NULL)\n",
@@ -792,13 +797,6 @@
    "source": [
     "%timeit integral.integral2()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
